--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
   <!--Java代码高亮-->
   <script src="//unpkg.com/prismjs/components/prism-java.min.js"></script>
   <script src="//unpkg.com/prismjs/components/prism-json.min.js"></script>
-   <!--全文搜索,直接用官方提供的无法生效-->
+  <!--全文搜索,直接用官方提供的无法生效-->
   <script src="https://cdn.bootcss.com/docsify/4.5.9/plugins/search.min.js"></script>
+  <!-- 添加代码右上角复制到剪切板按钮 -->
+  <script src="//unpkg.com/docsify-copy-code"></script>
 </body>
 </html>
