--- a/index.html
+++ b/index.html
@@ -31,12 +31,15 @@
 	}
   </script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
-  <!--Java代码高亮-->
+  <!-- Java代码高亮 -->
   <script src="//unpkg.com/prismjs/components/prism-java.min.js"></script>
   <script src="//unpkg.com/prismjs/components/prism-json.min.js"></script>
-  <!--全文搜索,直接用官方提供的无法生效-->
-  <script src="https://cdn.bootcss.com/docsify/4.5.9/plugins/search.min.js"></script>
+  <!-- 全文搜索,直接用官方提供的无法生效 -->
+  <script src="//cdn.bootcss.com/docsify/4.5.9/plugins/search.min.js"></script>
   <!-- 添加代码右上角复制到剪切板按钮 -->
   <script src="//unpkg.com/docsify-copy-code"></script>
+  <!-- 支持Markdown中的TaLeX数学公式 -->
+  <script src="//cdn.jsdelivr.net/npm/docsify-katex@latest/dist/docsify-katex.js"></script>
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/katex@latest/dist/katex.min.css">
 </body>
 </html>
