--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <script>
     window.$docsify = {
       name: '目录',
-      repo: 'https://github.com/WeiJinglun/myblogs',
+      repo: '/README.md',
 	  maxLevel: 3,// 最大支持渲染的标题层级
 	  loadSidebar: true,//侧边栏,_sidebar.md
       alias: { // 加载多级目录
@@ -24,7 +24,7 @@
       },
       loadNavbar: true,// 导航栏,_navbar.md
       auto2top: true,// 切换页面后是否自动跳转到页面顶部
-	  // coverpage: true,// 封面,_coverpage.md
+	  coverpage: true,// 封面,_coverpage.md
       themeColor: '#2478e3',// 主题颜色
 	  search: {
         paths: 'auto',
@@ -34,7 +34,6 @@
         // depth:3,
       },
       markdown: {
-        xhtml:true
       },
       plugins: [
         function (hook) {
@@ -53,7 +52,7 @@
 	}
   </script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
-  <!-- Java代码高亮 -->
+  <!-- 代码高亮 -->
   <script src="//unpkg.com/prismjs/components/prism-java.min.js"></script>
   <script src="//unpkg.com/prismjs/components/prism-c.min.js"></script>
   <script src="//unpkg.com/prismjs/components/prism-json.min.js"></script>
