--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="//unpkg.com/gitalk/dist/gitalk.css">
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/katex@latest/dist/katex.min.css">
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/gitalk/dist/gitalk.css">
 </head>
 <body>
   <div id="app"></div>
@@ -62,6 +64,20 @@
   <script src="//unpkg.com/docsify-copy-code"></script>
   <!-- 支持Markdown中的TaLeX数学公式 -->
   <script src="//cdn.jsdelivr.net/npm/docsify-katex@latest/dist/docsify-katex.js"></script>
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/katex@latest/dist/katex.min.css">
+  <!-- 评论 -->
+  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/gitalk.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/gitalk/dist/gitalk.min.js"></script>
+  <script>
+    const gitalk = new Gitalk({
+      clientID: '4253560f119383038155',
+      clientSecret: '913de9bf20dce8e827dcef89159fd1e86958b01e',
+      repo: 'myblogs',
+      owner: 'WeiJinglun',
+      admin: ['WeiJinglun'],
+      // facebook-like distraction free mode
+      distractionFreeMode: false
+    })
+  </script>
+
 </body>
 </html>
