--- a/index.html
+++ b/index.html
@@ -1,83 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>小狐狸个人学习总结</title>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="description" content="小狐狸个人博客">
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
-  <link rel="stylesheet" href="//unpkg.com/gitalk/dist/gitalk.css">
-  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/katex@latest/dist/katex.min.css">
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/gitalk/dist/gitalk.css">
+    <meta charset="UTF-8">
+    <title>小狐狸个人学习总结</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <meta name="description" content="小狐狸个人博客">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
+    <link rel="stylesheet" href="//unpkg.com/gitalk/dist/gitalk.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/katex@latest/dist/katex.min.css">
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/gitalk/dist/gitalk.css">
 </head>
 <body>
-  <div id="app"></div>
-  <script>
+<div id="app"></div>
+<script>
     window.$docsify = {
-      name: '目录',
-      repo: '/README.md',
-	  maxLevel: 3,// 最大支持渲染的标题层级
-	  loadSidebar: true,//侧边栏,_sidebar.md
-      alias: { // 加载多级目录
-        './_sidebar.md': '/_sidebar.md'
-      },
-      loadNavbar: true,// 导航栏,_navbar.md
-      auto2top: true,// 切换页面后是否自动跳转到页面顶部
-	  coverpage: true,// 封面,_coverpage.md
-      themeColor: '#2478e3',// 主题颜色
-	  search: {
-        paths: 'auto',
-		placeholder: '搜索',
-		noData: '真的找不到了',
-	    // 搜索标题的最大程级, 1 - 6
-        // depth:3,
-      },
-      markdown: {
-      },
-      plugins: [
-        function (hook) {
-          var footer = [
-            '<hr/>',
-            '<footer>',
-            '<span><a href="https://github.com/WeiJinglun/myblogs">来自</a> 小狐狸个人学习笔记</span>',
-            '</footer>'
-          ].join('')
+        name: '目录',
+        repo: '/README.md',
+        maxLevel: 3,// 最大支持渲染的标题层级
+        loadSidebar: true,//侧边栏,_sidebar.md
+        alias: { // 加载多级目录
+            './_sidebar.md': '/_sidebar.md'
+        },
+        loadNavbar: true,// 导航栏,_navbar.md
+        auto2top: true,// 切换页面后是否自动跳转到页面顶部
+        coverpage: true,// 封面,_coverpage.md
+        themeColor: '#2478e3',// 主题颜色
+        search: {
+            paths: 'auto',
+            placeholder: '搜索',
+            noData: '真的找不到了',
+            // 搜索标题的最大程级, 1 - 6
+            // depth:3,
+        },
+        markdown: {},
+        plugins: [
+            function (hook) {
+                var footer = [
+                    '<hr/>',
+                    '<footer>',
+                    '<span><a href="https://github.com/WeiJinglun/myblogs">来自</a> 小狐狸个人学习笔记</span>',
+                    '</footer>'
+                ].join('')
 
-          hook.afterEach(function (html) {
-            return html + footer
-          })
-        }
-      ]
-	}
-  </script>
-  <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
-  <!-- 代码高亮 -->
-  <script src="//unpkg.com/prismjs/components/prism-java.min.js"></script>
-  <script src="//unpkg.com/prismjs/components/prism-c.min.js"></script>
-  <script src="//unpkg.com/prismjs/components/prism-json.min.js"></script>
-  <!-- 全文搜索,直接用官方提供的无法生效 -->
-  <script src="//cdn.bootcss.com/docsify/4.5.9/plugins/search.min.js"></script>
-  <!-- 添加代码右上角复制到剪切板按钮 -->
-  <script src="//unpkg.com/docsify-copy-code"></script>
-  <!-- 支持Markdown中的TaLeX数学公式 -->
-  <script src="//cdn.jsdelivr.net/npm/docsify-katex@latest/dist/docsify-katex.js"></script>
-  <!-- 评论 -->
-  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/gitalk.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/gitalk/dist/gitalk.min.js"></script>
-  <script>
+                hook.afterEach(function (html) {
+                    return html + footer
+                })
+            }
+        ]
+    }
+</script>
+<script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
+<!-- 代码高亮 -->
+<script src="//unpkg.com/prismjs/components/prism-java.min.js"></script>
+<script src="//unpkg.com/prismjs/components/prism-c.min.js"></script>
+<script src="//unpkg.com/prismjs/components/prism-json.min.js"></script>
+<!-- 全文搜索,直接用官方提供的无法生效 -->
+<script src="//cdn.bootcss.com/docsify/4.5.9/plugins/search.min.js"></script>
+<!-- 添加代码右上角复制到剪切板按钮 -->
+<script src="//unpkg.com/docsify-copy-code"></script>
+<!-- 支持Markdown中的TaLeX数学公式 -->
+<script src="//cdn.jsdelivr.net/npm/docsify-katex@latest/dist/docsify-katex.js"></script>
+<!-- 评论 -->
+<script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/gitalk.min.js"></script>
+<script src="//cdn.jsdelivr.net/npm/gitalk/dist/gitalk.min.js"></script>
+<script>
     const gitalk = new Gitalk({
-      clientID: '4253560f119383038155',
-      clientSecret: '913de9bf20dce8e827dcef89159fd1e86958b01e',
-      repo: 'myblogs',
-      owner: 'WeiJinglun',
-      admin: ['WeiJinglun'],
-      // facebook-like distraction free mode
-      distractionFreeMode: false
+        clientID: '4253560f119383038155',
+        clientSecret: '913de9bf20dce8e827dcef89159fd1e86958b01e',
+        repo: 'myblogs',
+        owner: 'WeiJinglun',
+        admin: ['WeiJinglun'],
+        // title: location.hash.match(/#(.*?)([?]|$)/)[1],
+        // id: location.hash.match(/#(.*?)([?]|$)/)[1],
+        // facebook-like distraction free mode
+        distractionFreeMode: false
     })
-  </script>
+</script>
 
 </body>
 </html>
