--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                 "tv_惊吓": "0d15c7e2ee58e935adc6a7193ee042388adc22af.png",
             }
         },
+
     }
 </script>
 <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
@@ -95,5 +96,11 @@
 <script src="//unpkg.com/docsify-valine/dist/docsify-valine.min.js"></script>
 <!-- 上下章节 -->
 <script src="//unpkg.com/docsify-pagination/dist/docsify-pagination.min.js"></script>
+<script>
+    ((window.gitter = {}).chat = {}).options = {
+        room: 'weijinglun/community'
+    };
+</script>
+<script src="https://sidecar.gitter.im/dist/sidecar.v1.js" async defer></script>
 </body>
 </html>
