--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         name: '目录',
         repo: '/README.md',
         maxLevel: 3,// 最大支持渲染的标题层级
-        subMaxLevel:4,
+        subMaxLevel: 4,
         loadSidebar: true,//侧边栏,_sidebar.md
         loadNavbar: true,// 导航栏,_navbar.md
         auto2top: true,// 切换页面后是否自动跳转到页面顶部
@@ -64,6 +64,7 @@
         repo: 'myblogs',
         owner: 'WeiJinglun',
         admin: ['WeiJinglun'],
+        id: location.pathname,
         // facebook-like distraction free mode
         distractionFreeMode: false
     })
