--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         repo: 'myblogs',
         owner: 'WeiJinglun',
         admin: ['WeiJinglun'],
-        id:encodeURI(location.href),
+        id: encodeURI(window.location.href),
         // facebook-like distraction free mode
         distractionFreeMode: false
     })
