--- a/index.html
+++ b/index.html
@@ -66,9 +66,7 @@
         clientSecret: 'e3535ab5b30ab1cfa5df8606e5dd4c91abcef675',
         repo: 'myblogs',
         owner: 'WeiJinglun',
-        admin: ['WeiJinglun'],
-        // facebook-like distraction free mode
-        distractionFreeMode: false
+        admin: ['WeiJinglun']
     })
 </script>
 
